deploy: ba9a8af9fabe1c167971f41e307840c040234ee4

--- a/markdown-notebooks.html
+++ b/markdown-notebooks.html
@@ -283,6 +283,24 @@ title="Launch on Binder"
 
       </li>
       
+      <li>
+        <a href="https://colab.research.google.com/github/li-positive-one/AI4SC0/blob/main/ai4sc0/markdown-notebooks.md"
+   class="headerbtn"
+   data-toggle="tooltip"
+data-placement="left"
+title="Launch on Colab"
+>
+  
+
+<span class="headerbtn__icon-container">
+  
+    <img src="_static/images/logo_colab.png">
+  </span>
+<span class="headerbtn__text-container">Colab</span>
+</a>
+
+      </li>
+      
     </ul>
   </div>
 </div>
